feat: create unit test for controller